fix layout bugs

--- a/static/style/layout/top-nav.less
+++ b/static/style/layout/top-nav.less
@@ -84,8 +84,13 @@
 	position: fixed;
 	top: calc(@nav-top + @search-top);
 	.nav-tab-box{
-		width: 75%;
 		margin: 0 auto;
+	}
+	.nav-tab-box-two{
+		width: 75%;
+	}
+	.nav-tab-box-four{
+		width: 90%;
 	}
 }
 
